--- a/App/index.html
+++ b/App/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="Images/images.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
+    <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
     <!-- CSS files end here -->
     <!-- js files start here -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -20,6 +21,7 @@
 <div ng-controller="mainCtrl">
  <div ng-include="'Templates/header.html'"></div>
  <div ui-view></div>
+    <!-- ui-view shows, we are using UI routing -->
 </div>
     
 <script src="Login/login.js"></script>
