added the code for sorting technique

--- a/App/index.html
+++ b/App/index.html
@@ -27,7 +27,7 @@
 <!-- ui-view shows, we are using UI routing -->
 <!-- <ng-Validate-Alphabets>this is element</ng-Validate-Alphabets> -->
 <!--<div ng-Validate-Alphabets>This div tag with directive</div> -->
-<!-- the above one is declaration of directive -->
+<!-- the above one is declaration of custom directive -->
 </div> 
     
 <script src="Login/login.js"></script>
